2005-02-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_log.nw: Added code to scroll to the end of the text buffer
	when the log window is opened up.

2005-02-20  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/i_callbacks.nw, noweb/gschem.nw: Adapted for new logging 
	system.
	
	* include/x_log.h: New header file for new x_log.nw.

	* noweb/x_log.nw: Cleaned-up.

2005-02-19  Carlos Nieves Onega <cnieves@iespana.es>

	* bitmap/Makefile.am, bitmap/README: Added new file gschem-warning.png.
	* include/prototype.h, include/x_states.h, lib/system-gschemrc.in,
	  noweb/Makefile.am, noweb/g_keys.nw, noweb/g_register.nw, 
	  noweb/globals.nw, noweb/i_basic.nw, noweb/i_callbacks.nw,
	  noweb/o_basic.nw, noweb/o_complex.nw, noweb/o_copy.nw,
	  noweb/o_delete.nw, noweb/o_grips.nw, noweb/o_misc.nw,
	  noweb/o_move.nw, noweb/o_picture.nw, noweb/rcstrings.nw,
	  noweb/x_event.nw, src/Makefile.am:
	  Added picture support.	
	
2005-02-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/fr_FR.po, LINGUAS: Added French translation by Iznogood.

2005-02-14 22:29  Dan McMahill <danmc>

	* noweb/x_preview.nw: add missing header file needed for chdir()

2005-02-13  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/g_keys.nw (g_get_selected_component_attributes): Adapted for 
	new prototype of get_selected_component_attributes.
	(g_get_selected_filename): Adapted for new prototype of 
	get_selected_filename;

	* noweb/g_funcs.nw (get_selected_component_attributes): Rewritten to 
	use a GLib hash table instead of the libgeda s_scratch code. Also 
	reduced number of parameters.
	(get_selected_filename): Reduced number of parameters.

2005-02-13  Carlos Nieves Onega <cnieves@iespana.es>

        * po/es_ES.po, po/LINGUAS: Added first version of spanish translation.
	
2005-02-13  Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, noweb/x_pagesel.nw:
	  Commented out the code defining the "Discard page" button,
	  so it doesn't appear in the page manager.